fix(period): load periods in findAll so period count displays correctly
- FiscalYearRepositoryImpl.findAll now loads periods per FY via N+1
  count query (acceptable: companies have <10 FYs per page)
- Fixes '0 periods' badge on Accounting Period list page
- dev-seeder.sql: add GL seeder (2 FY, 24 periods, 49 COA accounts)
- dev-seeder.sql: reset admin password_change_required=0 for frictionless dev login